Fix user message bubble width and right-align in chat
User messages were stretching to 100% from chat > * rule. Override
with fit-content and right-margin calc to stay right-aligned within
the 720px content area.

--- a/styles.css
+++ b/styles.css
@@ -446,6 +446,11 @@ h2 {
   width: 100%;
 }
 
+.course-layout > .chat > .msg-user {
+  width: fit-content;
+  margin-right: max(0px, calc((100% - 720px) / 2));
+}
+
 
 .course-layout > .chat {
   flex: 1;
